--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -5,11 +5,11 @@
     var description = "<p>Final issue! Witness the final hours of Doctor Octopus' life and his one, last, great act of revenge! Even if Spider-Man survives... <strong>will Peter Parker?</strong></p>";
     var artists = new string[]
     {
-        "Script: Dan Slott",
-        "Pencils: Humberto Ramos",
-        "Inks: Victor Olazaba",
-        "Colors: Edgar Delgado",
-        "Letters: Chris Eliopoulos"
+        //"Script: Dan Slott",
+        //"Pencils: Humberto Ramos",
+        //"Inks: Victor Olazaba",
+        //"Colors: Edgar Delgado",
+        //"Letters: Chris Eliopoulos"
     };
 }
 
@@ -27,9 +27,20 @@
 
         <h5>Description:</h5>
         <div>@Html.Raw(description)</div>
+        
+        @if (artists.Length > 0)
+        {
+            <h5>Artists</h5>
+            <div>
+                <ul>
+                    @foreach(var artist in artists)
+                    {
+                    <li>@artists</li>
+                    }
+                </ul>
+            </div>
+        }
 
-        <h5>Artists</h5>
-        <div>@artists</div>
     </div>
 </body>
 </html>
