--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -35,7 +35,7 @@
                 <ul>
                     @foreach(var artist in artists)
                     {
-                    <li>@artists</li>
+                    <li>@artist</li>
                     }
                 </ul>
             </div>
